--- a/IN3_FW/motherBoard/IN3_FW/platformio.ini
+++ b/IN3_FW/motherBoard/IN3_FW/platformio.ini
@@ -11,6 +11,9 @@
 platform = espressif32
 framework = arduino
 board = esp32doit-devkit-v1
+board_build.f_cpu = 240000000L
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
 monitor_speed = 115200
 build_flags = -DCORE_DEBUG_LEVEL=5
 lib_deps=
