--- a/IN3_FW/motherBoard/IN3_FW/.vscode/settings.json
+++ b/IN3_FW/motherBoard/IN3_FW/.vscode/settings.json
@@ -42,6 +42,7 @@
         "cinttypes": "cpp",
         "utility": "cpp",
         "typeinfo": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "random": "cpp"
     }
 }
