--- a/IN3_FW/motherBoard/platformio.ini
+++ b/IN3_FW/motherBoard/platformio.ini
@@ -7,10 +7,10 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
+[env:esp32dev]
 platform = https://github.com/platformio/platform-espressif32.git
 framework = arduino
-board = esp32doit-devkit-v1
+board = esp32dev
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 board_build.flash_mode = qio
