--- a/IN3_FW/motherBoard/platformio.ini
+++ b/IN3_FW/motherBoard/platformio.ini
@@ -16,8 +16,8 @@ board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 board_build.flash_mode = qio
 monitor_speed = 115200
-#monitor_filters = esp32_exception_decoder
-#build_type = debug
+monitor_filters = esp32_exception_decoder
+build_type = debug
 build_flags = -DCORE_DEBUG_LEVEL=5
 lib_deps=
 	https://github.com/br3ttb/Arduino-PID-Library.git
