--- a/IN3_FW/motherBoard/platformio.ini
+++ b/IN3_FW/motherBoard/platformio.ini
@@ -10,8 +10,8 @@
 [env:esp32-in3ator]
 platform = https://github.com/platformio/platform-espressif32.git
 framework = arduino
-board = esp32dev
-#board_build.partitions = default_16MB.csv
+board = quantum
+board_build.partitions = in3ator_OTA_partition.csv
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 board_build.flash_mode = qio
