Upgrade firmware to 11.0

--- a/IN3_FW/motherBoard/platformio.ini
+++ b/IN3_FW/motherBoard/platformio.ini
@@ -10,7 +10,8 @@
 [env:esp32-in3ator]
 platform = https://github.com/platformio/platform-espressif32.git
 framework = arduino
-board = quantum
+board = firebeetle32
+#board = esp32dev // for 4MB versions
 board_build.partitions = in3ator_OTA_partition.csv
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
@@ -19,6 +20,8 @@ monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 build_type = debug
 build_flags = -DCORE_DEBUG_LEVEL=5
+debug_tool = esp-prog
+debug_init_break = tbreak setup
 lib_deps=
 	https://github.com/br3ttb/Arduino-PID-Library.git
 	https://github.com/mathertel/RotaryEncoder.git
